--- a/app/src/main/res/layout/yellow_fragment.xml
+++ b/app/src/main/res/layout/yellow_fragment.xml
@@ -1,13 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:background="@color/yellow">
+<android.support.v4.widget.NestedScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:fillViewport="true" >
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/yellow_recyclerview"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:background="@color/yellow" />
+        <!--android:paddingBottom="256dp"-->
+        <!--android:clipToPadding="false"-->
+        <!--/>-->
 
-</LinearLayout>
+</android.support.v4.widget.NestedScrollView>
