--- a/app/src/main/res/layout/pink_fragment.xml
+++ b/app/src/main/res/layout/pink_fragment.xml
@@ -2,18 +2,19 @@
 <android.support.v4.widget.NestedScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:fillViewport="true" >
 
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/pink">
+        android:layout_height="match_parent"
+        android:background="@color/pink" >
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/lorem"/>
+            android:text="@string/lorem" />
 
     </LinearLayout>
 
