--- a/app/src/main/res/layout/yellow_fragment.xml
+++ b/app/src/main/res/layout/yellow_fragment.xml
@@ -1,17 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.NestedScrollView
+<android.support.v7.widget.RecyclerView
     xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/yellow_recyclerview"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:fillViewport="true" >
-
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/yellow_recyclerview"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/yellow" />
-        <!--android:paddingBottom="256dp"-->
-        <!--android:clipToPadding="false"-->
-        <!--/>-->
-
-</android.support.v4.widget.NestedScrollView>
+    android:layout_height="wrap_content"
+    android:background="@color/yellow"
+    android:fillViewport="true" />
